--- a/index.html
+++ b/index.html
@@ -14,12 +14,34 @@
 </head>
 
 <body>
-<!-- Секция header -->
+
     <header class="header">
-        <div class="container">
-            <h1 class="h1__title">Be aware, Manage well.</h1>
-            <p class="header__text">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-            <button class="btn__text header__btn">Find Your Way</button>
+        <!--Меню  -->
+        <section class="menu">
+            <div class="container">
+                <div class="menu__inner">
+                    <img src="img/Logo_header.svg" alt="Logo" class="header__img">
+                    <ul class="nav">
+                        <li><a href="">Why Alivio</a></li>
+                        <li><a href="">Solutions</a></li>
+                        <li><a href="">Community</a></li>
+                        <li><a href="">Pricing</a></li>
+                    </ul>
+                    <div class="header__link">
+                        <a href="">Sign in</a>
+                        <button class="btn__text menu__btn">Start Trial</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Секция header -->
+        <div class="header__title">
+            <div class="container">
+                <h1 class="h1__title">Be aware, Manage well.</h1>
+                <p class="header__text">Everyone experiences stress in different ways. Let Alivio guide you, in a
+                    personalized journal experience, to overcome your stress.</p>
+                <button class="btn__text header__btn">Find Your Way</button>
+            </div>
         </div>
     </header>
 
