--- a/index.html
+++ b/index.html
@@ -45,6 +45,54 @@
         </div>
     </header>
 
+    <!-- Секция 2 -->
+    <section class="section2">
+        <div class="container_2">
+            <div class="section2__inner">
+                <div class="section2__title">
+                    <div class="section2__subject">
+                        <p class="subject__p section2__subject__p">How it works</p>
+                        <h2 class="text__h2 section2__h2">Understand & Release 
+                            the stress in 3 steps</h2>
+                    </div>
+                    <p class="section2__text title__text">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
+                </div>
+                <div class="section2__grid">
+                    <div class="section2__grid-item item-1">
+                        <div class="grid-item__number">
+                            <p class="number">01</p>
+                            <h3 class="grid-item__h3 h3__col-1">Personalize</h3>
+                        </div>
+                        <p class="section2__text grid__text">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                        <img src="img/grid-img-1.png" alt="" class="section2__img">
+                    </div>
+                    <div class="section2__grid-item item-2">
+                        <div class="grid-item__number">
+                            <p class="number">02</p>
+                            <h3 class="grid-item__h3  h3__col-2">Write & Understand</h3>
+                        </div>
+                        <p class="section2__text grid__text">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+                        <img src="img/grid-img-2.png" alt="" class="section2__img">
+                    </div>
+                    <div class="section2__grid-item item-3">
+                        <div class="grid-item__number">
+                            <p class="number">03</p>
+                            <h3 class="grid-item__h3  h3__col-3">Alivio!</h3>
+                        </div>
+                        <p class="section2__text grid__text">Now you are aware, and have a way to manage and overcome your own stress.
+                            What are you waiting for? Alivio today!</p>
+                        <img src="img/grid-img-3.png" alt="" class="section2__img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Секция 3 -->
+    <section class="section3"></section>
+    <!-- Секция 4 -->
+    <section class="section4"></section>
+
     <!-- Секция footer -->
     <footer class="footer">
         <div class="container">
