--- a/index.html
+++ b/index.html
@@ -89,7 +89,21 @@
     </section>
 
     <!-- Секция 3 -->
-    <section class="section3"></section>
+    <section class="section3">
+        <div class="container_3">
+            <div class="section3__inner">
+                <div class="section3__title">
+                    <h2 class="text__h2 section3__h2">Let's hear about Kayla's success story</h2>
+                    <p class="subject__p section3__text">See how well Alivio works in a real customer’s life. </p>
+                    <button class="btn__text section3__btn">Let’s get started</button>
+                </div>
+                <div class="section3__video">
+                    <img src="img/section3-img.jpg" alt="video" class="section3__img">
+                    <a href="https://rutube.ru/video/1ebf3ff2f32ea614977f1080b15b56fc/" target="_blank"><img src="img/section3-icon.svg" alt="enter" class="video__img"></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Секция 4 -->
     <section class="section4"></section>
 
