--- a/index.html
+++ b/index.html
@@ -105,7 +105,23 @@
         </div>
     </section>
     <!-- Секция 4 -->
-    <section class="section4"></section>
+    <section class="section4">
+        <div class="container">
+            <div class="section4__inner">
+                <div class="cards">
+                    <img src="img/section4-img.png" alt="" class="section4__img">
+                    <img src="img/Card.png" alt="" class="section4__card">
+                </div>
+                <div class="section4__title">
+                    <p class="subject__p section4__subject__p">Our product</p>
+                    <h2 class="text__h2 section4__h2">You tell us your stress,
+                        We make your diary</h2>
+                    <p class="section4__text title__text">Everyone experiences it, and in different ways. <br> Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                    <button class="btn__text section4__btn">Find Your Way</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Секция footer -->
     <footer class="footer">
